[project]
name = "recrewter"
version = "0.1.0"
description = "recrewter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
recrewter = "recrewter.main:run"
run_crew = "recrewter.main:run"
train = "recrewter.main:train"
replay = "recrewter.main:replay"
test = "recrewter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
